Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Programming fits or go for a bigger DDD stack using Qi4j
 
 <p>See this tutorial on <a href="http://qi4j.org/howto-assemble-application.html">how to assemble a more complete Qi4j application</a>.</p>
 
-<h2>Integrations and usage</h2>
+<h2>Integrations</h2>
 
 <h3>Application Lifecycle and Modes</h3>
 
@@ -389,6 +389,16 @@ specific language governing permissions and limitations under the License.</p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-36048640-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
