Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p>Play! 2 Qi4j Plugin</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/eskatos">eskatos</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
         <h1>
@@ -366,7 +366,7 @@ public class MyController {
 <h4>
 <a name="envisage" class="anchor" href="#envisage"><span class="octicon octicon-link"></span></a>Envisage</h4>
 
-<p>By setting <code>qi4j.envisable=enabled</code> in your <code>application.conf</code>
+<p>By setting <code>qi4j.envisage=enabled</code> in your <code>application.conf</code>
 the <a href="http://qi4j.org/latest/tools-envisage.html">Envisage Qi4j Tool</a>
 is started/reloaded/stopped alongside your application.</p>
 
